- Fixed crash on missing tile - Removed deprecated url object - Fixed temperature - Added longitude and latitude cords to f3 (might be off a bit fix later) - small optimizations