@@ -10,15 +10,15 @@ import java.awt.image.BufferedImage;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
-import java.net.URL;
+import java.net.URI;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.Arrays;
 import java.util.Map;
 import java.util.concurrent.ConcurrentHashMap;
 
 import static xyz.lynxs.terrarium.Terrarium.CONFIG;
+import static xyz.lynxs.terrarium.Util.pack;
 
 
 public class HeightProvider {
@@ -26,50 +26,49 @@ public class HeightProvider {
     private static final Logger LOGGER = Terrarium.LOGGER;
     public static int offset = (int) (256 * Math.pow(2, CONFIG.zoom))/5;
     public static int size = (int) (256 * Math.pow(2, CONFIG.zoom));
-    private static Map<Long, int[][]> cache = new ConcurrentHashMap<>();
+    private static final Map<Long, int[][]> cache = new ConcurrentHashMap<>();
     public static void init(){
         offset = (int) (256 * Math.pow(2, CONFIG.zoom))/5;
         size = (int) (256 * Math.pow(2, CONFIG.zoom));
     }
 
-    @Deprecated
-    private static void getElevationFromHeightmap(long key, int xTile, int zTile) {
+    private static BufferedImage getElevationFromHeightmap(int xTile, int zTile) {
 
 
         String cachePath = CONFIG.CACHE_DIR + CACHE_DIR + CONFIG.zoom + "/" + xTile + "/" + zTile + ".png";
-        String urlString = CONFIG.ELEVATION_URL + CONFIG.zoom + "/" + xTile + "/" + zTile + ".png";
+        URI uri = CONFIG.ELEVATION_URL.resolve(CONFIG.zoom + "/" + xTile + "/" + zTile + ".png");
 
         File cacheFile = new File(cachePath);
         if (cacheFile.exists()) {
             try {
-                cache.put(key, toIntHeightmap(ImageIO.read(cacheFile)));
+                return ImageIO.read(cacheFile);
 
             } catch (Exception e) {
                 LOGGER.error("Failed to load tile from cache: {}", e.getMessage());
             }
         }
-        else {
-            try {
-                URL url = new URL(urlString);
-                try (InputStream inputStream = url.openStream()) {
-                    BufferedImage tileImage = ImageIO.read(inputStream);
-                    if (tileImage == null) {
-                        throw new IOException("Failed to read image from URL: " + urlString);
-                    }
+        try {
+            try (InputStream inputStream = uri.toURL().openStream()) {
+                BufferedImage tileImage = ImageIO.read(inputStream);
 
-                    Path cacheDir = Paths.get(cacheFile.getParent());
-                    if (!Files.exists(cacheDir)) {
-                        Files.createDirectories(cacheDir);
-                    }
-                    ImageIO.write(tileImage, "png", cacheFile);
-
-                    cache.put(key, toIntHeightmap(tileImage));
+                if (tileImage == null) {
+                    throw new IOException("Failed to read image from URL: " + uri.toString());
                 }
-            } catch (IOException e) {
-                LOGGER.error("Failed to download tile: {}", e.getMessage());
+
+                Path cacheDir = Paths.get(cacheFile.getParent());
+                if (!Files.exists(cacheDir)) {
+                    Files.createDirectories(cacheDir);
+                }
+                ImageIO.write(tileImage, "png", cacheFile);
+                return tileImage;
+
             }
+        } catch (IOException e) {
+            LOGGER.error("Failed to download tile: {}", e.getMessage());
         }
+        return new BufferedImage(256, 256, BufferedImage.TYPE_INT_RGB);
     }
+
 
     private static int[][] toIntHeightmap(BufferedImage image){
         int[][] arr = new int[image.getWidth()][image.getHeight()];
@@ -94,13 +93,6 @@ public class HeightProvider {
         long key = pack(xTile,zTile);
         if(cache.size() > 64)
             cache.clear();
-        if (!cache.containsKey(key)) {
-            getElevationFromHeightmap(key, xTile, zTile);
-        }
-        return cache.get(key)[Math.abs(xPixel)][Math.abs(zPixel)];
-    }
-
-    public static long pack(int x, int z) {
-        return ((long) x & 0xFFFFFFFFL) | ((long) z & 0xFFFFFFFFL) << 32;
+        return cache.computeIfAbsent(key, k -> toIntHeightmap(getElevationFromHeightmap(xTile, zTile)))[xPixel][zPixel];
     }
 }
